Добавлены img и css

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
+  <link href="css/style.css" rel="stylesheet">
   <title>Barbershop shop</title>
 </head>
 <body>
@@ -10,28 +10,28 @@
      <div class="container">
        <nav class="sub-menu">
          <div class="header-logo">
-           <img src="http://placehold.it/150x100" alt="Barbershop">
+           <img src="img/logo-item.png" width="111" height="24" alt="Barbershop">
          </div>
          <ul>
            <li>
-             <a href="http://placehold.it/150x100">Информация</a>
+             <a href="#">Информация</a>
            </li>
            <li>
-             <a href="http://placehold.it/150x100">Новости</a>
+             <a href="#">Новости</a>
            </li>
            <li>
-             <a href="http://placehold.it/150x100">Прайс-лист</a>
+             <a href="#">Прайс-лист</a>
            </li>
            <li>
-             <a href="http://placehold.it/150x100">Магазин</a>
+             <a href="#">Магазин</a>
            </li>
            <li>
-             <a href="http://placehold.it/150x100">Контакты</a>
+             <a href="#">Контакты</a>
            </li>
          </ul>
        </nav>
       <div class="user-block">
-         <a class="login" href="http://placehold.it/150x100">Вход</a>
+         <a class="login" href="#">Вход</a>
       </div>
      </div>
     </header>
@@ -40,25 +40,25 @@
       <div class="breadcrumbs">
         <ul>
             <li>
-              <a href="http://placehold.it/150x100">Главная</a>
+              <a href="#">Главная</a>
             </li>
             <li>
-              <a href="http://placehold.it/150x100">Магазин</a>
+              <a href="#">Магазин</a>
             </li>
             <li>
-              <a href="http://placehold.it/150x100">Средства для ухода</a>
+              <a href="#">Средства для ухода</a>
             </li>
             <li>
-              <a href="http://placehold.it/150x100">Набор для путешествий "BAXTER OF CALIFORNIA"</a>
+              <a href="#">Набор для путешествий "BAXTER OF CALIFORNIA"</a>
             </li>
         </ul>
       </div>
       <div class="item">
         <div class="item-gallery">
-          <img src="http://placehold.it/150x100" class="main" alt="Travel kit">
-          <img src="http://placehold.it/150x100" class="sub" alt="Travel kit">
-          <img src="http://placehold.it/150x100" class="sub" alt="Travel bag">
-          <img src="http://placehold.it/150x100" class="sub" alt="Travel kit">
+          <img src="img/travelkitbig.jpg" width="486" height="524" class="main" alt="Travel kit">
+          <img src="img/travelkitsmall1.jpg" width="166" height="175" class="sub" alt="Travel kit">
+          <img src="img/travelkitsmall2.jpg" width="166" height="175" class="sub" alt="Travel bag">
+          <img src="img/travelkitsmall3.jpg" width="166" height="175" class="sub" alt="Travel kit">
         </div>
         <div class="status">
           <p>Есть в наличии</p>
@@ -67,7 +67,7 @@
         <p>TRAVEL-KIT - Необходимый асессуар во время любого путешествия. А аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
         </p>
         <b>2 900 РУБ.</b>
-        <a class="btn" href="http://placehold.it/150x100">Купить</a>
+        <a class="btn" href="#">Купить</a>
         <section class="content">
           <h2>В набор входят:</h2>
           <ul>
@@ -90,9 +90,9 @@
          </section>
          <section class="footer-social">
            <p>Давайте дружить!</p>
-           <a class="social-btn social-btn-vk" href="http://placehold.it/150x100">Вконтакте</a>
-           <a class="social-btn social-btn-fb" href="http://placehold.it/150x100">Фейсбук</a>
-           <a class="social-btn social-btn-inst" href="http://placehold.it/150x100">Инстаграм</a>
+           <a class="social-btn social-btn-vk" href="#"><img src="img/v.png" width="25" height="16" alt="Вконтакте">Вконтакте</a>
+           <a class="social-btn social-btn-fb" href="#"><img src="img/f.png" width="25" height="16" alt="Фейсбук">Фейсбук</a>
+           <a class="social-btn social-btn-inst" href="#"><img src="img/i.png" width="25" height="16" alt="Инстаграм">Инстаграм</a>
          </section>
          <section class="footer-copyright">
            <p>Разработано:</p>
