--- a/catalog-price.html
+++ b/catalog-price.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
+  <link href="css/style.css" rel="stylesheet">
   <title>Barbershop shop</title>
 </head>
 <body>
@@ -10,7 +10,7 @@
       <div class="container">
         <nav class="sub-menu">
             <div class="header-logo">
-              <img src="#" alt="Barbershop">
+              <img src="img/logo-item.png" width="111" height="24" alt="Barbershop">
             </div>
           <ul>
             <li>
@@ -97,9 +97,9 @@
            </section>
            <section class="footer-social">
              <p>Давайте дружить!</p>
-             <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-             <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-             <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+             <a class="social-btn social-btn-vk" href="#"><img src="img/v.png" width="25" height="16" alt="Вконтакте">Вконтакте</a>
+             <a class="social-btn social-btn-fb" href="#"><img src="img/f.png" width="25" height="16" alt="Фейсбук">Фейсбук</a>
+             <a class="social-btn social-btn-inst" href="#"><img src="img/i.png" width="25" height="16" alt="Инстаграм">Инстаграм</a>
            </section>
            <section class="footer-copyright">
              <p>Разработано:</p>
