--- a/catalog.html
+++ b/catalog.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
+  <link href="css/style.css" rel="stylesheet">
   <title>Barbershop shop</title>
 </head>
 <body>
@@ -10,23 +10,23 @@
     <div class="container">
       <nav class="sub-menu">
         <div class="header-logo">
-           <img src="http://placehold.it/150x100" alt="Barbershop">
+           <img src="img/logo-item.png" width="111" height="24" alt="Barbershop">
         </div>
         <ul>
            <li>
-             <a href="http://placehold.it/150x100">Информация</a>
+             <a href="#">Информация</a>
            </li>
            <li>
-             <a href="http://placehold.it/150x100">Новости</a>
+             <a href="#">Новости</a>
            </li>
            <li>
-             <a href="http://placehold.it/150x100">Прайс-лист</a>
+             <a href="#">Прайс-лист</a>
            </li>
            <li>
-             <a href="http://placehold.it/150x100">Магазин</a>
+             <a href="#">Магазин</a>
            </li>
            <li>
-             <a href="http://placehold.it/150x100">Контакты</a>
+             <a href="#">Контакты</a>
            </li>
          </ul>
       </nav>
@@ -52,58 +52,58 @@
   </div>
   <div class="articles">
     <article class="catalog-item">
-      <a href="http://placehold.it/150x100">
-      <img src="http://placehold.it/150x100" alt="Набор для путешествий"></a>
-      <a href="http://placehold.it/150x100">Набор для путешествий "Baxter of California"</a>
+      <a href="#">
+      <img src="img/item1.jpg" width="220" height="165" alt="Набор для путешествий"></a>
+      <a href="#">Набор для путешествий "Baxter of California"</a>
       <b>2900 РУБ.</b>
       <a class="btn" href="#">Купить</a>
     </article>
     <article class="catalog-item">
-      <a href="http://placehold.it/150x100">
-      <img src="http://placehold.it/150x100" alt="Увлажняющий кондиционер">
+      <a href="#">
+      <img src="img/item2.jpg" width="220" height="165" alt="Увлажняющий кондиционер">
       </a>
-      <a href="http://placehold.it/150x100">Увлажняющий кондиционер «Baxter of California»</a>
+      <a href="#">Увлажняющий кондиционер «Baxter of California»</a>
       <b>750 РУБ.</b>
       <a class="btn" href="#">Купить</a>
     </article>
     <article class="catalog-item">
-      <a href="http://placehold.it/150x100">
-      <img src="http://placehold.it/150x100" alt="Гель для волос">
+      <a href="#">
+      <img src="img/item3.jpg" width="220" height="165" alt="Гель для волос">
       </a>
-      <a href="http://placehold.it/150x100">Гель для волос «Suavecito»</a>
+      <a href="#">Гель для волос «Suavecito»</a>
       <b>290 РУБ.</b>
       <a class="btn" href="#">Купить</a>
     </article>
     <article class="catalog-item">
-      <a href="http://placehold.it/150x100">
-      <img src="http://placehold.it/150x100" alt="Глина для укладки волос">
+      <a href="#">
+      <img src="img/item4.jpg" width="220" height="165" alt="Глина для укладки волос">
       </a>
-      <a href="http://placehold.it/150x100">Глина для укладки волос «American Crew»</a>
+      <a href="#">Глина для укладки волос «American Crew»</a>
       <b>500 РУБ.</b>
-      <a class="btn" href="http://placehold.it/150x100">Купить</a>
-    </article>
-    <article class="catalog-item">
-      <a href="http://placehold.it/150x100">
-      <img src="http://placehold.it/150x100" alt="Гель для волос">
-      </a>
-      <a href="http://placehold.it/150x100">Гель для волос «American Crew»</a>
-      <b>300 РУБ.</b>
-      <a class="btn" href="http://placehold.it/150x100">Купить</a>
+      <a class="btn" href="#">Купить</a>
     </article>
     <article class="catalog-item">
       <a href="#">
-      <img src="http://placehold.it/150x100" alt="Набор для бритья">
+      <img src="img/item5.jpg" width="220" height="165" alt="Гель для волос">
       </a>
-      <a href="http://placehold.it/150x100">Набор для бритья «Baxter of California»</a>
+      <a href="#">Гель для волос «American Crew»</a>
+      <b>300 РУБ.</b>
+      <a class="btn" href="#">Купить</a>
+    </article>
+    <article class="catalog-item">
+      <a href="#">
+      <img src="img/item6.jpg" width="220" height="165" alt="Набор для бритья">
+      </a>
+      <a href="#">Набор для бритья «Baxter of California»</a>
       <b>3 900 РУБ.</b>
-      <a class="btn" href="http://placehold.it/150x100">Купить</a>
+      <a class="btn" href="#">Купить</a>
     </article>
   </div>
   <div class="paginator">
-    <a href="http://placehold.it/150x100">1</a>
-    <a href="http://placehold.it/150x100">2</a>
-    <a href="http://placehold.it/150x100">3</a>
-    <a href="http://placehold.it/150x100">4</a>
+    <a href="#">1</a>
+    <a href="#">2</a>
+    <a href="#">3</a>
+    <a href="#">4</a>
   </div>
   <aside>
     <div class="producers">
@@ -135,7 +135,7 @@
       Аксессуары
       </label>
     </div>
-    <a class="btn" href="http://placehold.it/150x100">Показать</a>
+    <a class="btn" href="#">Показать</a>
   </aside>
   <footer class="main-footer">
      <div class="container">
@@ -147,9 +147,9 @@
         </section>
         <section class="footer-social">
           <p>Давайте дружить!</p>
-          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+          <a class="social-btn social-btn-vk" href="#"><img src="img/v.png" width="25" height="16" alt="Вконтакте">Вконтакте</a>
+          <a class="social-btn social-btn-fb" href="#"><img src="img/f.png" width="25" height="16" alt="Фейсбук">Фейсбук</a>
+          <a class="social-btn social-btn-inst" href="#"><img src="img/i.png" width="25" height="16" alt="Инстаграм">Инстаграм</a>
         </section>
         <section class="footer-copyright">
           <p>Разработано:</p>
