--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
         </section>
         <section class="footer-social">
           <p>Давайте дружить!</p>
-          <a class="social-btn social-btn-vk" href="#"><img src="img/v.png" width="25" height="16" alt="Вконтакте">Вконтакте</a>
-          <a class="social-btn social-btn-fb" href="#"><img src="img/f.png" width="25" height="16" alt="Фейсбук">Фейсбук</a>
-          <a class="social-btn social-btn-inst" href="#"><img src="img/i.png" width="25" height="16" alt="Инстаграм">Инстаграм</a>
+          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
         </section>
         <section class="footer-copyright">
           <p>Разработано:</p>
