--- a/catalog-item.html
+++ b/catalog-item.html
@@ -6,12 +6,12 @@
   <title>Barbershop shop</title>
 </head>
 <body>
-   <header  class="sub-header">
-     <div class="container">
-       <nav class="sub-menu">
-         <div class="header-logo">
+  <header class="sub-header">
+    <div class="container clearfix">
+      <nav class="sub-navigation">
+        <div class="header-logo">
            <img src="img/logo-item.png" width="111" height="24" alt="Barbershop">
-         </div>
+        </div>
          <ul>
            <li>
              <a href="#">Информация</a>
@@ -35,7 +35,7 @@
       </div>
      </div>
     </header>
-    <main>
+    <main class="container">
     <h1>Набор для путешествий "BAXTER OF CALIFORNIA"</h1>
       <div class="breadcrumbs">
         <ul>
@@ -53,17 +53,19 @@
             </li>
         </ul>
       </div>
+      <div class="clearfix">
       <div class="item">
-        <div class="item-gallery">
-          <img src="img/travelkitbig.jpg" width="486" height="524" class="main" alt="Travel kit">
-          <img src="img/travelkitsmall1.jpg" width="166" height="175" class="sub" alt="Travel kit">
-          <img src="img/travelkitsmall2.jpg" width="166" height="175" class="sub" alt="Travel bag">
-          <img src="img/travelkitsmall3.jpg" width="166" height="175" class="sub" alt="Travel kit">
+          <img src="img/travelkitbig.jpg" width="460" height="498" class="main" alt="Travel kit">
+
+          <img src="img/travelkitsmall1.jpg" width="140" height="149" class="sub" alt="Travel kit">
+          <img src="img/travelkitsmall2.jpg" width="140" height="149" class="sub" alt="Travel bag">
+          <img src="img/travelkitsmall3.jpg" width="140" height="149" class="sub" alt="Travel kit">
+
         </div>
         <div class="status">
           <p>Есть в наличии</p>
           <p>Артикул:DEXTER-AE</p>
-        </div>
+
         <p>TRAVEL-KIT - Необходимый асессуар во время любого путешествия. А аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
         </p>
         <b>2 900 РУБ.</b>
@@ -78,10 +80,12 @@
             <li>Удобная кожаная косметичка (50 МЛ)</li>
            </ul>
         </section>
+        </div>
+      </div>
       </div>
     </main>
-    <footer class="main-footer">
-      <div class="container">
+    <footer class="sub-footer">
+      <div class="container clearfix">
          <section class="footer-contacts">
            Барбершоп «Бородинский»<br>
            Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
