--- a/catalog-item.html
+++ b/catalog-item.html
@@ -2,13 +2,15 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic">
+  <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <title>Barbershop shop</title>
 </head>
 <body>
-  <header class="sub-header">
+  <header class="main-header">
     <div class="container clearfix">
-      <nav class="sub-navigation">
+      <nav class="main-navigation">
         <div class="header-logo">
            <img src="img/logo-item.png" width="111" height="24" alt="Barbershop">
         </div>
@@ -84,7 +86,7 @@
       </div>
       </div>
     </main>
-    <footer class="sub-footer">
+    <footer class="main-footer">
       <div class="container clearfix">
          <section class="footer-contacts">
            Барбершоп «Бородинский»<br>
