--- a/catalog.html
+++ b/catalog.html
@@ -48,25 +48,31 @@
            <a href="#">Магазин</a>
        </li>
        <li>
-           <a href="#">Средства для ухода</a>
+           <span href="#">Средства для ухода</span>
        </li>
      </ul>
   </div>
   <div class="clearfix">
-    <div class="catalog-row">
   <div class="articles">
+    <div class="catalog-row">
     <article class="catalog-item">
       <a href="#">
       <img src="img/item1.jpg" width="220" height="165" alt="Набор для путешествий"></a>
-      <a href="#">Набор для путешествий "Baxter of California"</a>
+      <div class="item-link">
+      <a href="#">Набор для путешествий<br><span>«Baxter of California»</span></a>
+      </div>
+     <div class="catalog-price clearfix">
       <b>2900 РУБ.</b>
       <a class="btn" href="#">Купить</a>
+      </div>
     </article>
     <article class="catalog-item">
       <a href="#">
       <img src="img/item2.jpg" width="220" height="165" alt="Увлажняющий кондиционер">
       </a>
-      <a href="#">Увлажняющий кондиционер «Baxter of California»</a>
+      <div class="item-link">
+      <a href="#">Увлажняющий кондиционер<br><span>«Baxter of California»</span></a>
+      </div>
       <b>750 РУБ.</b>
       <a class="btn" href="#">Купить</a>
     </article>
@@ -74,17 +80,21 @@
       <a href="#">
       <img src="img/item3.jpg" width="220" height="165" alt="Гель для волос">
       </a>
-      <a href="#">Гель для волос «Suavecito»</a>
+      <div class="item-link">
+      <a href="#">Гель для волос<br><span>«Suavecito»</span></a>
+      </div>
       <b>290 РУБ.</b>
       <a class="btn" href="#">Купить</a>
     </article>
-    <div>
+  </div>
       <div class="catalog-row">
     <article class="catalog-item">
       <a href="#">
       <img src="img/item4.jpg" width="220" height="165" alt="Глина для укладки волос">
       </a>
-      <a href="#">Глина для укладки волос «American Crew»</a>
+      <div class="item-link">
+      <a href="#">Глина для укладки волос<br><span>«American Crew»</span></a>
+      </div>
       <b>500 РУБ.</b>
       <a class="btn" href="#">Купить</a>
     </article>
@@ -92,7 +102,9 @@
       <a href="#">
       <img src="img/item5.jpg" width="220" height="165" alt="Гель для волос">
       </a>
-      <a href="#">Гель для волос «American Crew»</a>
+      <div class="item-link">
+      <a href="#">Гель для волос<br><span>«American Crew»</span></a>
+      </div>
       <b>300 РУБ.</b>
       <a class="btn" href="#">Купить</a>
     </article>
@@ -100,7 +112,9 @@
       <a href="#">
       <img src="img/item6.jpg" width="220" height="165" alt="Набор для бритья">
       </a>
-      <a href="#">Набор для бритья «Baxter of California»</a>
+      <div class="item-link">
+      <a href="#">Набор для бритья<br><span>«Baxter of California»</span></a>
+    </div>
       <b>3 900 РУБ.</b>
       <a class="btn" href="#">Купить</a>
     </article>
@@ -124,25 +138,19 @@
     </div>
     <div class="item-groups">
       <h2>Группы товаров:</h2>
-      <label>
-      <input type="radio" value="shaving-item" name="item-groups">
-      Бритвенные<br>принадлежности
-      </label>
-      <label>
-      <input type="radio" value="care-item" name="item-groups">
-      Средства для ухода
-      </label>
-      <label>
-      <input type="radio" value="accessories-item" name="item-groups">
-      Аксессуары
-      </label>
+      <input type="radio" value="shaving-item" id="shaving" name="item-groups">
+      <label for="shaving">Бритвенные принадлежности</label>
+      <input type="radio" value="care-item" id="care" name="item-groups">
+      <label for="care">Средства для ухода</label>
+      <input type="radio" value="accessories-item" id="accessories" name="item-groups">
+      <label for="accessories">Аксессуары</label>
     </div>
     <a class="btn" href="#">Показать</a>
   </aside>
   </div>
   <div class="paginator">
     <a href="#">1</a>
-    <a class="current" href="#">2</a>
+    <div class="current" href="#">2</div>
     <a href="#">3</a>
     <a href="#">4</a>
   </div>
