--- a/catalog.html
+++ b/catalog.html
@@ -25,7 +25,7 @@
              <a href="#">Прайс-лист</a>
            </li>
            <li>
-             <a href="#">Магазин</a>
+             <a class="indicator" href="#">Магазин</a>
            </li>
            <li>
              <a href="#">Контакты</a>
@@ -63,7 +63,7 @@
       </div>
      <div class="catalog-price clearfix">
       <b>2900 РУБ.</b>
-      <a class="btn" href="#">Купить</a>
+      <a class="btn item-btn" href="#">Купить</a>
       </div>
     </article>
     <article class="catalog-item">
@@ -73,8 +73,10 @@
       <div class="item-link">
       <a href="#">Увлажняющий кондиционер<br><span>«Baxter of California»</span></a>
       </div>
+      <div class="catalog-price clearfix">
       <b>750 РУБ.</b>
-      <a class="btn" href="#">Купить</a>
+      <a class="btn item-btn" href="#">Купить</a>
+        </div>
     </article>
     <article class="catalog-item">
       <a href="#">
@@ -83,8 +85,10 @@
       <div class="item-link">
       <a href="#">Гель для волос<br><span>«Suavecito»</span></a>
       </div>
+      <div class="catalog-price clearfix">
       <b>290 РУБ.</b>
-      <a class="btn" href="#">Купить</a>
+      <a class="btn item-btn" href="#">Купить</a>
+        </div>
     </article>
   </div>
       <div class="catalog-row">
@@ -95,8 +99,10 @@
       <div class="item-link">
       <a href="#">Глина для укладки волос<br><span>«American Crew»</span></a>
       </div>
+      <div class="catalog-price clearfix">
       <b>500 РУБ.</b>
-      <a class="btn" href="#">Купить</a>
+      <a class="btn item-btn" href="#">Купить</a>
+        </div>
     </article>
     <article class="catalog-item">
       <a href="#">
@@ -105,8 +111,10 @@
       <div class="item-link">
       <a href="#">Гель для волос<br><span>«American Crew»</span></a>
       </div>
+      <div class="catalog-price clearfix">
       <b>300 РУБ.</b>
-      <a class="btn" href="#">Купить</a>
+      <a class="btn item-btn" href="#">Купить</a>
+      </div>
     </article>
     <article class="catalog-item">
       <a href="#">
@@ -115,8 +123,10 @@
       <div class="item-link">
       <a href="#">Набор для бритья<br><span>«Baxter of California»</span></a>
     </div>
+    <div class="catalog-price clearfix">
       <b>3 900 РУБ.</b>
-      <a class="btn" href="#">Купить</a>
+      <a class="btn item-btn" href="#">Купить</a>
+    </div>
     </article>
   </div>
   </div>
@@ -140,7 +150,7 @@
       <h2>Группы товаров:</h2>
       <input type="radio" value="shaving-item" id="shaving" name="item-groups">
       <label for="shaving">Бритвенные принадлежности</label>
-      <input type="radio" value="care-item" id="care" name="item-groups">
+      <input type="radio" value="care-item" id="care" name="item-groups" checked>
       <label for="care">Средства для ухода</label>
       <input type="radio" value="accessories-item" id="accessories" name="item-groups">
       <label for="accessories">Аксессуары</label>
@@ -149,10 +159,10 @@
   </aside>
   </div>
   <div class="paginator">
-    <a href="#">1</a>
+    <a class="paginator-btn" href="#">1</a>
     <div class="current" href="#">2</div>
-    <a href="#">3</a>
-    <a href="#">4</a>
+    <a class="paginator-btn" href="#">3</a>
+    <a class="paginator-btn" href="#">4</a>
   </div>
   </main>
   <footer class="main-footer">
