Добавлены стили для каталога

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -25,7 +25,7 @@
              <a href="#">Прайс-лист</a>
            </li>
            <li>
-             <a href="#">Магазин</a>
+             <a class="indicator" href="#">Магазин</a>
            </li>
            <li>
              <a href="#">Контакты</a>
@@ -38,7 +38,7 @@
      </div>
     </header>
     <main class="container">
-    <h1>Набор для путешествий "BAXTER OF CALIFORNIA"</h1>
+    <h1>Набор для путешествий «BAXTER OF CALIFORNIA»</h1>
       <div class="breadcrumbs">
         <ul>
             <li>
@@ -51,27 +51,28 @@
               <a href="#">Средства для ухода</a>
             </li>
             <li>
-              <a href="#">Набор для путешествий "BAXTER OF CALIFORNIA"</a>
+              <span href="#">Набор для путешествий «BAXTER OF CALIFORNIA»</span>
             </li>
         </ul>
       </div>
       <div class="clearfix">
       <div class="item">
           <img src="img/travelkitbig.jpg" width="460" height="498" class="main" alt="Travel kit">
-
           <img src="img/travelkitsmall1.jpg" width="140" height="149" class="sub" alt="Travel kit">
           <img src="img/travelkitsmall2.jpg" width="140" height="149" class="sub" alt="Travel bag">
           <img src="img/travelkitsmall3.jpg" width="140" height="149" class="sub" alt="Travel kit">
-
         </div>
         <div class="status">
-          <p>Есть в наличии</p>
-          <p>Артикул:DEXTER-AE</p>
-
-        <p>TRAVEL-KIT - Необходимый асессуар во время любого путешествия. А аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
+          <div class="status-info clearfix">
+          <span class="status-presense">Есть в наличии</span>
+          <span class="status-article">Артикул:DEXTER-AE</span>
+          </div>
+          <p>TRAVEL-KIT - Необходимый асессуар во время любого путешествия. А аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
         </p>
+        <div class="catalog-price clearfix">
         <b>2 900 РУБ.</b>
-        <a class="btn" href="#">Купить</a>
+        <a class="btn item-btn" href="#">Купить</a>
+      </div>
         <section class="content">
           <h2>В набор входят:</h2>
           <ul>
