--- a/catalog-item.html
+++ b/catalog-item.html
@@ -7,7 +7,7 @@
   <link href="css/style.css" rel="stylesheet">
   <title>Barbershop shop</title>
 </head>
-<body>
+<body class="light">
   <header class="main-header">
     <div class="container clearfix">
       <nav class="main-navigation">
@@ -67,7 +67,7 @@
           <span class="status-presense">Есть в наличии</span>
           <span class="status-article">Артикул:DEXTER-AE</span>
           </div>
-          <p>TRAVEL-KIT - Необходимый асессуар во время любого путешествия. А аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
+          <p>TRAVEL-KIT — <a  class="status-btn" href="#">необходимый аксессуар</a> во время любого путешествия. А аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
         </p>
         <div class="catalog-price clearfix">
         <b>2 900 РУБ.</b>
