--- a/catalog-price.html
+++ b/catalog-price.html
@@ -7,7 +7,7 @@
   <link href="css/style.css" rel="stylesheet">
   <title>Barbershop shop</title>
 </head>
-<body>
+<body class="light">
   <header class="main-header">
     <div class="container clearfix">
       <nav class="main-navigation">
@@ -22,7 +22,7 @@
               <a href="#">Новости</a>
             </li>
             <li>
-              <a href="#">Прайс-лист</a>
+              <a class="indicator indicator-price" href="#">Прайс-лист</a>
             </li>
             <li>
               <a href="#">Магазин</a>
@@ -45,7 +45,7 @@
                <a href="#">Главная</a>
             </li>
             <li>
-               <a href="#">Прайс-лист</a>
+               <span href="#">Прайс-лист</span>
             </li>
         </ul>
       </div>
@@ -55,7 +55,7 @@
       <div class="clearfix">
       <div class="price-left">
         <section class="recipe">
-          <h2>Мы используем толко лучшие средства:</h2>
+          <h2>Мы используем только лучшие средства:</h2>
           <ul>
             <li>Baxter of California</li>
             <li>Mr Hatty</li>
@@ -72,7 +72,7 @@
       </div>
         <div class="price-right">
          <section class="price">
-          <h2>Цены на услуги наших мастеров:</h2>
+          <h2>Цены на услуги<br>наших мастеров:</h2>
           <table class="price-list">
             <tr>
               <td>Стрижка</td>
