--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <link href="css/style.css" rel="stylesheet">
   <title>Barbershop shop</title>
 </head>
-<body>
+<body class="light">
   <header class="main-header">
     <div class="container clearfix">
       <nav class="main-navigation">
