--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="css/style.css" rel="stylesheet">
     <title>Барбершоп «Бородинский»</title>
   </head>
-  <body>
+  <body class="dark">
     <header class="main-header">
       <div class="container clearfix">
         <nav class="main-navigation">
